[package]
name = "bytestream_derive"
version = "0.2.2"
authors = ["Amaan Qureshi <amaanq12@gmail.com>"]
edition = "2021"
description = "Codegen for Supercell bytestream"
license = "MIT"
publish = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = "1.0.105"
heck = "0.4.0"
